Almost finished live topic lists, you can find them at /topics/. You can disable them via config.json The topic list cache can handle more groups now, but don't go too crazy with groups (e.g. thousands of them).
Make the suspicious request logs more descriptive.
Added the phrases API endpoint.
Split the template phrases up by prefix, more work on this coming up.
Removed #dash_saved and part of #dash_username.
Removed some temporary artifacts from trying to implement FA5 in Nox.
Removed some commented CSS.
Fixed template artifact deletion on Windows.
Tweaked HTTPSRedirect to make it more compact.
Fixed NullUserCache not complying with the expectations for BulkGet.
Swapped out a few RunVhook calls for more appropriate RunVhookNoreturn calls.
Removed a few redundant IsAdmin checks when IsMod would suffice.
Commented out a few pushers.
Desktop notification permission requests are no longer served to guests.
Split topics.html into topics.html and topics_topic.html
RunThemeTemplate should now fallback to interpreted templates properly when the transpiled variants aren't avaialb.e
Changed TopicsRow.CreatedAt from a string to a time.Time
Added SkipTmplPtrMap to CTemplateConfig.
Added SetBuildTags to CTemplateSet.
A bit more data is dumped when something goes wrong while transpiling templates now.
topics_topic, topic_posts, and topic_alt_posts are now transpiled for the client, although not all of them are ready to be served to the client yet.
Client rendered templates now support phrases.
Client rendered templates now support loops.
Fixed loadAlerts in global.js
Refactored some of the template initialisation code to make it less repetitive.
Split topic.html into topic.html and topic_posts.html
Split topic_alt.html into topic_alt.html and topic_alt_posts.html
Added comments for PollCache.
Fixed a data race in the MemoryPollCache.
The writer is now closed properly in WsHubImpl.broadcastMessage.
Fixed a potential deadlock in WsHubImpl.broadcastMessage.
Removed some old comment

--- a/langs/english.json
+++ b/langs/english.json
@@ -285,20 +285,20 @@
 		"topics_likes_suffix":"likes",
 		"topics_last":"Last",
 		"topics_starter":"Starter",
-		"topic_like_count_suffix":" likes",
-		"topic_plus":"+",
-		"topic_plus_one":"+1",
-		"topic_gap_up":" up",
-		"topic_level":"Level",
-		"topic_edit_button_text":"Edit",
-		"topic_delete_button_text":"Delete",
-		"topic_ip_button_text":"IP",
-		"topic_lock_button_text":"Lock",
-		"topic_unlock_button_text":"Unlock",
-		"topic_pin_button_text":"Pin",
-		"topic_unpin_button_text":"Unpin",
-		"topic_report_button_text":"Report",
-		"topic_flag_button_text":"Flag",
+		"topic.like_count_suffix":" likes",
+		"topic.plus":"+",
+		"topic.plus_one":"+1",
+		"topic.gap_up":" up",
+		"topic.level":"Level",
+		"topic.edit_button_text":"Edit",
+		"topic.delete_button_text":"Delete",
+		"topic.ip_button_text":"IP",
+		"topic.lock_button_text":"Lock",
+		"topic.unlock_button_text":"Unlock",
+		"topic.pin_button_text":"Pin",
+		"topic.unpin_button_text":"Unpin",
+		"topic.report_button_text":"Report",
+		"topic.flag_button_text":"Flag",
 
 		"panel_rank_admins":"Admins",
 		"panel_rank_mods":"Mods",
@@ -413,16 +413,16 @@
 		"create_topic_create_topic_button":"Create Topic",
 		"create_topic_add_file_button":"Add File",
 
-		"quick_topic_aria":"Quick Topic Form",
-		"quick_topic_avatar_tooltip":"Your Avatar",
-		"quick_topic_avatar_alt":"Your Avatar",
-		"quick_topic_whatsup":"What's up?",
-		"quick_topic_content_placeholder":"Insert post here",
-		"quick_topic_add_poll_option":"Add new poll option",
-		"quick_topic_create_topic_button":"Create Topic",
-		"quick_topic_add_poll_button":"Add Poll",
-		"quick_topic_add_file_button":"Add File",
-		"quick_topic_cancel_button":"Cancel",
+		"quick_topic.aria":"Quick Topic Form",
+		"quick_topic.avatar_tooltip":"Your Avatar",
+		"quick_topic.avatar_alt":"Your Avatar",
+		"quick_topic.whatsup":"What's up?",
+		"quick_topic.content_placeholder":"Insert post here",
+		"quick_topic.add_poll_option":"Add new poll option",
+		"quick_topic.create_topic_button":"Create Topic",
+		"quick_topic.add_poll_button":"Add Poll",
+		"quick_topic.add_file_button":"Add File",
+		"quick_topic.cancel_button":"Cancel",
 
 		"topic_list_create_topic_tooltip":"Create Topic",
 		"topic_list_create_topic_aria":"Create a topic",
@@ -435,8 +435,8 @@
 		"topic_list_moderate_run":"Run",
 		"topic_list_move_head":"Move these topics to?",
 		"topic_list_move_button":"Move Topics",
-		"status_closed_tooltip":"Status: Closed",
-		"status_pinned_tooltip":"Status: Pinned",
+		"status.closed_tooltip":"Status: Closed",
+		"status.pinned_tooltip":"Status: Pinned",
 
 		"topics_head":"All Topics",
 		"topics_locked_tooltip":"You don't have the permissions needed to create a topic",
@@ -456,68 +456,68 @@
 		"forums_none":"None",
 		"forums_no_forums":"You don't have access to any forums.",
 
-		"topic_opening_post_aria":"The opening post for this topic",
-		"topic_status_closed_aria":"This topic has been locked",
-		"topic_title_input_aria":"Topic Title Input",
-		"topic_update_button":"Update",
-		"topic_userinfo_aria":"The information on the poster",
-		"topic_poll_aria":"The main poll for this topic",
-		"topic_poll_vote":"Vote",
-		"topic_poll_results":"Results",
-		"topic_poll_cancel":"Cancel",
-		"topic_post_controls_aria":"Controls and Author Information",
-		"topic_unlike_tooltip":"Unlike",
-		"topic_unlike_aria":"Unlike this topic",
-		"topic_like_tooltip":"Like",
-		"topic_like_aria":"Like this topic",
-		"topic_edit_tooltip":"Edit Topic",
-		"topic_edit_aria":"Edit this topic",
-		"topic_delete_tooltip":"Delete Topic",
-		"topic_delete_aria":"Delete this topic",
-		"topic_unlock_tooltip":"Unlock Topic",
-		"topic_unlock_aria":"Unlock this topic",
-		"topic_lock_tooltip":"Lock Topic",
-		"topic_lock_aria":"Lock this topic",
-		"topic_unpin_tooltip":"Unpin Topic",
-		"topic_unpin_aria":"Unpin this topic",
-		"topic_pin_tooltip":"Pin Topic",
-		"topic_pin_aria":"Pin this topic",
-		"topic_ip_tooltip":"View IP",
-		"topic_ip_full_tooltip":"IP Address",
-		"topic_ip_full_aria":"This user's IP Address",
-		"topic_flag_tooltip":"Flag this topic",
-		"topic_flag_aria":"Flag this topic",
-		"topic_report_tooltip":"Report this topic",
-		"topic_report_aria":"Report this topic",
-		"topic_like_count_aria":"The number of likes on this topic",
-		"topic_like_count_tooltip":"Like Count",
-		"topic_level_aria":"The poster's level",
-		"topic_level_tooltip":"Level",
-		"topic_current_page_aria":"The current page for this topic",
-		"topic_post_like_tooltip":"Like this",
-		"topic_post_like_aria":"Like this post",
-		"topic_post_unlike_tooltip":"Unlike this",
-		"topic_post_unlike_aria":"Unlike this post",
-		"topic_post_edit_tooltip":"Edit Reply",
-		"topic_post_edit_aria":"Edit this post",
-		"topic_post_delete_tooltip":"Delete Reply",
-		"topic_post_delete_aria":"Delete this post",
-		"topic_post_ip_tooltip":"View IP",
-		"topic_post_flag_tooltip":"Flag this reply",
-		"topic_post_flag_aria":"Flag this reply",
-		"topic_post_like_count_tooltip":"Like Count",
-		"topic_post_level_aria":"The poster's level",
-		"topic_post_level_tooltip":"Level",
-		"topic_reply_aria":"The quick reply form",
-		"topic_reply_content":"Insert reply here",
-		"topic_reply_content_alt":"What do you think?",
-		"topic_reply_add_poll_option":"Add new poll option",
-		"topic_reply_button":"Create Reply",
-		"topic_reply_add_poll_button":"Add Poll",
-		"topic_reply_add_file_button":"Add File",
+		"topic.opening_post_aria":"The opening post for this topic",
+		"topic.status_closed_aria":"This topic has been locked",
+		"topic.title_input_aria":"Topic Title Input",
+		"topic.update_button":"Update",
+		"topic.userinfo_aria":"The information on the poster",
+		"topic.poll_aria":"The main poll for this topic",
+		"topic.poll_vote":"Vote",
+		"topic.poll_results":"Results",
+		"topic.poll_cancel":"Cancel",
+		"topic.post_controls_aria":"Controls and Author Information",
+		"topic.unlike_tooltip":"Unlike",
+		"topic.unlike_aria":"Unlike this topic",
+		"topic.like_tooltip":"Like",
+		"topic.like_aria":"Like this topic",
+		"topic.edit_tooltip":"Edit Topic",
+		"topic.edit_aria":"Edit this topic",
+		"topic.delete_tooltip":"Delete Topic",
+		"topic.delete_aria":"Delete this topic",
+		"topic.unlock_tooltip":"Unlock Topic",
+		"topic.unlock_aria":"Unlock this topic",
+		"topic.lock_tooltip":"Lock Topic",
+		"topic.lock_aria":"Lock this topic",
+		"topic.unpin_tooltip":"Unpin Topic",
+		"topic.unpin_aria":"Unpin this topic",
+		"topic.pin_tooltip":"Pin Topic",
+		"topic.pin_aria":"Pin this topic",
+		"topic.ip_tooltip":"View IP",
+		"topic.ip_full_tooltip":"IP Address",
+		"topic.ip_full_aria":"This user's IP Address",
+		"topic.flag_tooltip":"Flag this topic",
+		"topic.flag_aria":"Flag this topic",
+		"topic.report_tooltip":"Report this topic",
+		"topic.report_aria":"Report this topic",
+		"topic.like_count_aria":"The number of likes on this topic",
+		"topic.like_count_tooltip":"Like Count",
+		"topic.level_aria":"The poster's level",
+		"topic.level_tooltip":"Level",
+		"topic.current_page_aria":"The current page for this topic",
+		"topic.post_like_tooltip":"Like this",
+		"topic.post_like_aria":"Like this post",
+		"topic.post_unlike_tooltip":"Unlike this",
+		"topic.post_unlike_aria":"Unlike this post",
+		"topic.post_edit_tooltip":"Edit Reply",
+		"topic.post_edit_aria":"Edit this post",
+		"topic.post_delete_tooltip":"Delete Reply",
+		"topic.post_delete_aria":"Delete this post",
+		"topic.post_ip_tooltip":"View IP",
+		"topic.post_flag_tooltip":"Flag this reply",
+		"topic.post_flag_aria":"Flag this reply",
+		"topic.post_like_count_tooltip":"Like Count",
+		"topic.post_level_aria":"The poster's level",
+		"topic.post_level_tooltip":"Level",
+		"topic.reply_aria":"The quick reply form",
+		"topic.reply_content":"Insert reply here",
+		"topic.reply_content_alt":"What do you think?",
+		"topic.reply_add_poll_option":"Add new poll option",
+		"topic.reply_button":"Create Reply",
+		"topic.reply_add_poll_button":"Add Poll",
+		"topic.reply_add_file_button":"Add File",
 
-		"topic_level_prefix":"Level ",
-		"topic_your_information":"Your information",
+		"topic.level_prefix":"Level ",
+		"topic.your_information":"Your information",
 
 		"paginator_less_than":"&lt;",
 		"paginator_greater_than":"&gt;",
