Live Topic List should work properly now with replies too, not just new topics. Tweaked the visuals for the live topic list on Cosora. More to come with this. Nox Theme is now present on the theme selector, although it's still under construction.
Improved SEO for social media.
Added the topic_list tmpl phrase prefix.
Added the topic_list.changed_topics phrase.
Added a few more PreparseMessage tests.
Session cookies should now be deleted after you logout, not just blanked.

--- a/langs/english.json
+++ b/langs/english.json
@@ -424,17 +424,18 @@
 		"quick_topic.add_file_button":"Add File",
 		"quick_topic.cancel_button":"Cancel",
 
-		"topic_list_create_topic_tooltip":"Create Topic",
-		"topic_list_create_topic_aria":"Create a topic",
-		"topic_list_moderate_tooltip":"Moderate",
-		"topic_list_moderate_aria":"Moderate Posts",
-		"topic_list_what_to_do":"What do you want to do with these 18 topics?",
-		"topic_list_moderate_delete":"Delete them",
-		"topic_list_moderate_lock":"Lock them",
-		"topic_list_moderate_move":"Move them",
-		"topic_list_moderate_run":"Run",
-		"topic_list_move_head":"Move these topics to?",
-		"topic_list_move_button":"Move Topics",
+		"topic_list.create_topic_tooltip":"Create Topic",
+		"topic_list.create_topic_aria":"Create a topic",
+		"topic_list.moderate_tooltip":"Moderate",
+		"topic_list.moderate_aria":"Moderate Posts",
+		"topic_list.what_to_do":"What do you want to do with these 18 topics?",
+		"topic_list.moderate_delete":"Delete them",
+		"topic_list.moderate_lock":"Lock them",
+		"topic_list.moderate_move":"Move them",
+		"topic_list.moderate_run":"Run",
+		"topic_list.move_head":"Move these topics to?",
+		"topic_list.move_button":"Move Topics",
+		"topic_list.changed_topics":"Click to see %d new or changed topics",
 		"status.closed_tooltip":"Status: Closed",
 		"status.pinned_tooltip":"Status: Pinned",
 
