--- a/langs/english.json
+++ b/langs/english.json
@@ -361,7 +361,7 @@
 		"register_account_email":"Email",
 		"register_account_password":"Password",
 		"register_account_confirm_password":"Confirm Password",
-		"register_account_anti_spam":"Are you a spambot?",
+		"register_account_anti_spam":"Ar​e y​ou a sp​am​bo​t?",
 		"register_submit_button":"Create Account",
 
 		"account_menu_head":"My Account",
