Added Caire and pkg/errors as dependencies. Made the initialisers and the task runner in main.go easier to debug.
Added form_button_row to a few forms.
Bumped up the attachment image size for Cosora.
Hid the formlabels for the setting editor for Cosora to make it cleaner.
Revamped the account manager with the same CSS as in the Control Panel for Nox.
Started adding the_form to more forms.
Removed the account_emails CSS class from the email editor.
Continued tweaking the Control Panel in Nox to make it look nicer.
Tweaked some of the headers in the Nox Theme.
Added the Create Topic and Moderate options to the topic list on the Nox Theme, although the bulk moderation tools aren't available yet.
Tweaked the padding and sticky shades on the topics on the topic list on the Nox Theme.
Closed topics are now somewhat styled on the topic list on the Nox Theme.
Continued work on the topic pages for Nox.

Renamed Admin Approval to Staff Approval in the English Language Pack.
Added more phrases for the Group Manager and Panel Menu in spots I overlooked.

Began work on the dyntmpl template function.
Be sure to run the patcher / update script to get the new setting.

--- a/langs/english.json
+++ b/langs/english.json
@@ -46,10 +46,11 @@
 
 	"SettingPhrases": {
 		"activation_type":"Activation Type",
-		"activation_type_label": "Activate All,Email Activation,Admin Approval",
+		"activation_type_label": "Activate All,Email Activation,Staff Approval",
 		"bigpost_min_words":"Big Post Minimum Words",
 		"megapost_min_words":"Mega Post Minimum Words",
-		"meta_desc":"Meta Description"
+		"meta_desc":"Meta Description",
+		"rapid_loading":"Rapid Loaded?"
 	},
 
 	"PermPresets": {
@@ -571,6 +572,8 @@
 		"panel_menu_settings":"Settings",
 		"panel_menu_word_filters":"Word Filters",
 		"panel_menu_themes":"Themes",
+		"panel_menu_menus":"Menus",
+		"panel_menu_widgets":"Widgets",
 		"panel_menu_events":"Events",
 		"panel_menu_statistics":"Statistics",
 		"panel_menu_statistics_posts":"Posts",
@@ -658,6 +661,7 @@
 		"panel_group_tag":"Tag",
 		"panel_group_tag_placeholder":"VIP",
 		"panel_group_update_button":"Update Group",
+		"panel_group_extended_permissions":"Extended Permissions",
 
 		"panel_word_filters_head":"Word Filters",
 		"panel_word_filters_edit_button_aria":"Edit Word Filter",
