Added the word filter store and moved the word filter routes into the route package. Added tests for the word filter store. Added qgen.NewAcc() to reduce the amount of boilerplate needed for creating an accumulator. Exposed the RecordError method on the accumulator. Added an Add method to PluginList and removed AddPlugin() in favour of that.
More panel buttons on Nox should be styled now.
Added the panel_update_button_text phrase for future use.

More errors might be caught in the thumbnailer now.
Removed ls from .travis.yml, it was there for debugging Code Climate.

--- a/langs/english.json
+++ b/langs/english.json
@@ -326,6 +326,7 @@
 		"panel_perms_default":"Default",
 
 		"panel_edit_button_text":"Edit",
+		"panel_update_button_text":"Update",
 		"panel_delete_button_text":"Delete",
 		
 		"menu_forums_tooltip":"Forum List",
