Finished the Most Viewed Page for Nox.
Added three phrases for topic_list.
Moved the topic_middle_inside suffix phrases from the CSS files into the template proper.
Removed a newline in topic_middle_inside and used flex instead.
The link_select drop-down is now only visible when someone clicks on the link.
Tweaked the .topic_forum line height for Cosora.
Tweaked the .topic_view_count font size for Cosora.

--- a/langs/english.json
+++ b/langs/english.json
@@ -441,6 +441,9 @@
 		"topic_list.move_head":"Move these topics to?",
 		"topic_list.move_button":"Move Topics",
 		"topic_list.changed_topics":"Click to see %d new or changed topics",
+		"topic_list.replies_suffix":"replies",
+		"topic_list.likes_suffix":"likes",
+		"topic_list.views_suffix":"views",
 		"status.closed_tooltip":"Status: Closed",
 		"status.pinned_tooltip":"Status: Pinned",
 
