Began localising the id_must_be_integer and url_id_must_be_integer error pages.
Fixed the punctuation on a couple of registration errors, these will be localised too soon enough.
Removed a bit of boiletplate in groups.go with buildBasePage.

--- a/langs/english.json
+++ b/langs/english.json
@@ -83,7 +83,10 @@
 		"security_error_title":"Security Error",
 		"security_error_body":"There was a security issue with your request.",
 		"banned_title":"Banned",
-		"banned_body":"You have been banned from this site."
+		"banned_body":"You have been banned from this site.",
+
+		"id_must_be_integer": "The ID must be an integer.",
+		"url_id_must_be_integer": "The ID in the URL needs to be a valid integer."
 	},
 
 	"PageTitles": {
