Localised more alert strings. Renamed most of the alert phrases. Fixes #3 - Default value issue with MySQL. Fixed a bug where pages would't load with HTTPS disabled.

--- a/langs/english.json
+++ b/langs/english.json
@@ -98,7 +98,11 @@
 		"register_username_too_long_prefix":"The username is too long, max: ",
 		"register_email_fail":"We were unable to send the email for you to confirm that this email address belongs to you. You may not have access to some functionality until you do so. Please ask an administrator for assistance.",
 
+		"alerts_no_actor":"Unable to find the actor",
+		"alerts_no_target_user":"Unable to find the target user",
 		"alerts_no_linked_topic":"Unable to find the linked topic",
+		"alerts_no_linked_topic_by_reply":"Unable to find the linked reply or parent topic",
+		"alerts_invalid_elementtype":"Invalid elementType",
 
 		"panel_groups_need_name":"The group name can't be left blank.",
 		"panel_groups_cannot_edit_admin":"You need the EditGroupAdmin permission to edit an admin group.",
@@ -315,30 +319,32 @@
 		"menu_login":"Login",
 		"menu_register":"Register",
 
-		"alerts_forum_new_topic":"{0} created the topic {1}",
-		"alerts_forum_unknown_action":"{0} did something in a forum",
-		
-		"alerts_topic_own_reply":"{0} replied to your topic {1}",
-		"alerts_topic_reply":"{0} replied to {1}",
-		"alerts_topic_own_like":"{0} liked your topic {1}",
-		"alerts_topic_like":"{0} liked {1}",
-		"alerts_topic_own_mention":"{0} mentioned you in {1}",
-		"alerts_topic_mention":"{0} mentioned you in {1}",
+		"alerts.forum_new_topic":"{0} created the topic {1}",
+		"alerts.forum_unknown_action":"{0} did something in a forum",
 
-		"alerts_post_own_reply":"{0} replied to your post in {1}",
-		"alerts_post_reply":"{0} replied to {1}",
-		"alerts_post_own_like":"{0} liked your post in {1}",
-		"alerts_post_like":"{0} liked a post in {1}",
-		"alerts_post_own_mention":"{0} mentioned you in {1}",
-		"alerts_post_mention":"{0} mentioned you in {1}",
+		"alerts.topic_own_reply":"{0} replied to your topic {1}",
+		"alerts.topic_reply":"{0} replied to {1}",
+		"alerts.topic_own_like":"{0} liked your topic {1}",
+		"alerts.topic_like":"{0} liked {1}",
+		"alerts.topic_own_mention":"{0} mentioned you in {1}",
+		"alerts.topic_mention":"{0} mentioned you in {1}",
 
-		"alerts_user_own_reply":"{0} made a post on your profile",
-		"alerts_user_reply":"{0} posted on {1}'s profile",
-		"alerts_user_own_like":"{0} likes you",
-		"alerts_user_like":"{0} likes {1}",
-		"alerts_user_own_mention":"{0} mentioned you on your profile",
-		"alerts_user_mention":"{0} mentioned you on {1}'s profile",
-		"alerts_new_friend_invite":"You received a friend invite from {0}",
+		"alerts.post_own_reply":"{0} replied to your post in {1}",
+		"alerts.post_reply":"{0} replied to {1}",
+		"alerts.post_own_like":"{0} liked your post in {1}",
+		"alerts.post_like":"{0} liked a post in {1}",
+		"alerts.post_own_mention":"{0} mentioned you in {1}",
+		"alerts.post_mention":"{0} mentioned you in {1}",
+
+		"alerts.user_own_reply":"{0} made a post on your profile",
+		"alerts.user_reply":"{0} posted on {1}'s profile",
+		"alerts.user_own_like":"{0} likes you",
+		"alerts.user_like":"{0} likes {1}",
+		"alerts.user_own_mention":"{0} mentioned you on your profile",
+		"alerts.user_mention":"{0} mentioned you on {1}'s profile",
+		"alerts.new_friend_invite":"You received a friend invite from {0}",
+
+		"alerts.no_alerts":"You don't have any alerts",
 
 		"topics_click_topics_to_select":"Click the topics to select them",
 		"topics_new_topic":"New Topic",
