Added level progress indicators, still WIP. Fixed a bug where GetLevelScore wouldn't work and simplified it slightly. Removed the account_dash_next_level phrase. Added the account_dash_level phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -448,7 +448,7 @@
 
 		"account_dash_2fa_setup":"Setup your two-factor authentication.",
 		"account_dash_2fa_manage":"Remove or manage your two-factor authentication.",
-		"account_dash_next_level":"Progress to next level.",
+		"account_dash_level":"Level %d",
 		"account_dash_security_notice":"Security",
 		"account_avatar_select":"Select",
 		"account_avatar_update_button":"Upload",
