--- a/langs/english.json
+++ b/langs/english.json
@@ -2,7 +2,7 @@
 	"Name": "english",
 	
 	"Levels": {
-		"Level": "Level {0}",
+		"Level": "<span class='level_hideable'>Level </span>{0}",
 		"LevelMax": ""
 	},
 
@@ -361,7 +361,6 @@
 		"topic.plus":"+",
 		"topic.plus_one":"+1",
 		"topic.gap_up":" up",
-		"topic.level":"Level",
 		"topic.edit_button_text":"Edit",
 		"topic.delete_button_text":"Delete",
 		"topic.ip_button_text":"IP",
@@ -448,7 +447,6 @@
 
 		"account_dash_2fa_setup":"Setup your two-factor authentication.",
 		"account_dash_2fa_manage":"Remove or manage your two-factor authentication.",
-		"account_dash_level":"Level %d",
 		"account_dash_security_notice":"Security",
 		"account_avatar_select":"Select",
 		"account_avatar_update_button":"Upload",
@@ -596,7 +594,6 @@
 		"topic.reply_add_poll_button":"Add Poll",
 		"topic.reply_add_file_button":"Add File",
 
-		"topic.level_prefix":"Level ",
 		"topic.your_information":"Your information",
 
 		"paginator_less_than":"&lt;",
