Fixed a bug where phrases would sometimes get entitised. Fixed a couple of spots which didn't have phrases. Removed inline CSS in a couple of places and added a missing tooltip.
Added the account_username_save phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -448,6 +448,7 @@
 		"account_dash_2fa_setup":"Setup your two-factor authentication.",
 		"account_dash_2fa_manage":"Remove or manage your two-factor authentication.",
 		"account_dash_security_notice":"Security",
+		"account_username_save":"Save",
 		"account_avatar_select":"Select",
 		"account_avatar_update_button":"Upload",
 
