Refactored the plugin system to use a hook table. This should help to reduce the probability of data races and strange bugs, as-well as helping to abstract certain details, so future changes are less likely to break things. Fixed the missing background for the create topic non-JS page in Nox. The non-JS create topic page now has a localised title.

--- a/langs/english.json
+++ b/langs/english.json
@@ -121,6 +121,7 @@
 		"page":"Page",
 		"topics":"All Topics",
 		"forums":"Forum List",
+		"create_topic":"Create Topic",
 		"login":"Login",
 		"login_mfa_verify":"2FA Verify",
 		"register":"Registration",
