Revamped the Nox Account Manager and Control Panel Menus. The topics list template is now generated by loggedin. Replaced some uses of {{if ne .CurrentUser.ID 0}} with {{if .CurrentUser.Loggedin}} Fixed a bug in the profiles where the comment creation form was shown to guests. Added the profile_comments_form_guest phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -637,6 +637,7 @@
 		"profile_comments_report_aria":"Report Item",
 		"profile_comments_form_content":"Insert comment here",
 		"profile_comments_form_button":"Create Reply",
+		"profile_comments_form_guest":"You need to login to comment on this profile.",
 		"profile_owner_tag":"Profile Owner",
 
 		"ip_search_head":"IP Search",
