Revamped the IP Search Page for Nox. Revamped the Word Filter Manager for Nox. Revamped the Setting Manager for Nox and Cosora. Upped the number of items in the User Manager. Upped the number of items in the Group Manager. Upped the number of items in the Page Manager. Swap a fmt.Println for a DebugLog in hold.ScanItem. EQCSS.js should ignore panel.css in Cosora now. Added the lang template function for stylesheet templates to reduce the amount of boilerplate. Localised a couple of spots in the Nox Theme which got overlooked. Tweaked the grid CSS for Nox. The Control Panel Dashboard items now change colour in Nox like in the other themes. Use Site.Host instead of req.Host for www redirects for security reasons. Removed a superfluous function call in WriterIntercept.WriteHeader. Tweaked several bits and pieces of CSS like the padding on a few items in the Forum Editor.
Added the topic_list.moderate phrase.
Added the panel_word_filters_to phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -505,6 +505,7 @@
 
 		"topic_list.create_topic_tooltip":"Create Topic",
 		"topic_list.create_topic_aria":"Create a topic",
+		"topic_list.moderate":"Moderate",
 		"topic_list.moderate_tooltip":"Moderate",
 		"topic_list.moderate_aria":"Moderate Posts",
 		"topic_list.what_to_do":"What do you want to do with these {0} topics?",
@@ -765,6 +766,7 @@
 		"panel_group_extended_permissions":"Extended Permissions",
 
 		"panel_word_filters_head":"Word Filters",
+		"panel_word_filters_to":"...to...",
 		"panel_word_filters_edit_button_aria":"Edit Word Filter",
 		"panel_word_filters_update_button":"Update",
 		"panel_word_filters_delete_button_aria":"Delete Word Filter",
