Improved mobile usability for Nox in the topic list, profiles, account manager and control panel. More to come.
Fixed a bug in the template generator where fragment indices would sometimes become negative.
Forum pages are now considered to be part of /forums/ instead of /topics/ in the menu tab highlighter.
Fixed a bug in the forum page in Nox where the forum options weren't aligned to the right.
Switched out a couple of {{if ne .CurrentUser.ID 0}}s for {{if .CurrentUser.Loggedin}}s
Moved the filter opt separator into it's own DOM node for easier styling.

Added the quick_topic.create_topic_button_short phrase.
Added the topic_list.moderate_short phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -499,6 +499,7 @@
 		"quick_topic.content_placeholder":"Insert post here",
 		"quick_topic.add_poll_option":"Add new poll option",
 		"quick_topic.create_topic_button":"Create Topic",
+		"quick_topic.create_topic_button_short":"New Topic",
 		"quick_topic.add_poll_button":"Add Poll",
 		"quick_topic.add_file_button":"Add File",
 		"quick_topic.cancel_button":"Cancel",
@@ -506,6 +507,7 @@
 		"topic_list.create_topic_tooltip":"Create Topic",
 		"topic_list.create_topic_aria":"Create a topic",
 		"topic_list.moderate":"Moderate",
+		"topic_list.moderate_short":"Mod",
 		"topic_list.moderate_tooltip":"Moderate",
 		"topic_list.moderate_aria":"Moderate Posts",
 		"topic_list.what_to_do":"What do you want to do with these {0} topics?",
